--- a/Romanian/main/DownloadProviderUi.apk/res/values-ro/strings.xml
+++ b/Romanian/main/DownloadProviderUi.apk/res/values-ro/strings.xml
@@ -8,6 +8,7 @@
     <string name="Only_the_wifi">Doar în Wi-Fi</string>
     <string name="about">Despre</string>
     <string name="action_settings">Setări</string>
+    <string name="ad_install">Instalați</string>
     <string name="ad_mark">AD</string>
     <string name="ad_title">Alte persoane au descărcat aceste fișiere utilizând %1$s </string>
     <string name="ad_title_other">Persoanele care au descărcat această imagine au mai descărcat și</string>
@@ -53,6 +54,8 @@
     <string name="deselect_all">Deselectaţi-le pe toate</string>
     <string name="deselect_subfile_all">Deselectaţi-le pe toate</string>
     <string name="determine">OK</string>
+    <string name="dialog_btn_cancel">Renunțați</string>
+    <string name="dialog_btn_ok">OK</string>
     <string name="dialog_btn_ok_disabled_net">Setări de rețea</string>
     <string name="dialog_cannot_resume">Descărcarea a fost întreruptă şi nu poate fi reluată.</string>
     <string name="dialog_confirm_delete_checkbox_message">Ștergeți, de asemenea, fișierele locale</string>
@@ -66,23 +69,26 @@
     <string name="dialog_insufficient_space_on_external">Nu se poate finaliza descărcarea. Nu există suficient spaţiu de stocare extern.</string>
     <string name="dialog_media_not_found">Nu se poate descărca. Nu este disponibil un mediu de stocare extern.</string>
     <string name="dialog_msg_disabled_net">%1$s descărcări restricționate în rețeaua curentă. Atingeți butonul Setările rețelei pentru a deschide aplicația Securitate.</string>
+    <string name="dialog_msg_recommend">"Nu veți mai putea sursele recomandate după ce veți dezactiva. Puteți selecta \"Încarcă atunci când este conectat la Wi-Fi\" pentru a economisi datele mobile."</string>
     <string name="dialog_queued_body">Fişierul este adăugat în coadă pentru descărcare ulterioară, prin urmare nu este disponibil încă.</string>
     <string name="dialog_title_disabled_net">Acces la internet</string>
     <string name="dialog_title_not_available">Nu s-a putut descărca</string>
     <string name="dialog_title_queued_body">Fişier la coadă</string>
+    <string name="dialog_title_recommend">Dezactivați sursele recomandate</string>
     <string name="disable">Dezactivaţi</string>
     <string name="display_expire_netiv1">În această lună</string>
     <string name="do_not_support_url">Acest tip de URL nu este acceptat</string>
     <string name="doc_filter">Document</string>
     <string name="download">Descărcări</string>
     <string name="download_auth">Obţinere autorizare…</string>
-    <string name="download_complete">FINALIZAT</string>
+    <string name="download_complete">Descărcate</string>
     <string name="download_detail">Detalii</string>
     <string name="download_error">Nereuşit</string>
+    <string name="download_error_download_file_not_exists">"Fișierul nu există"</string>
     <string name="download_error_insufficient_space">Spaţiu insuficient</string>
     <string name="download_filesize_unknown">Necunoscut</string>
     <string name="download_from">Sursa:</string>
-    <string name="download_in_process">SE DESCARCĂ</string>
+    <string name="download_in_process">În curs de descărcare</string>
     <string name="download_info_count_deleted_tasks">%s descărcări eliminate</string>
     <string name="download_info_start_deleted_tasks">Ştergeţi descărcările</string>
     <string name="download_list_get_free_vip">Xunlei trial</string>
@@ -164,9 +170,9 @@
     <string name="high_speed_tryout_time">Perioadă de încercare rămasă: %1$s. Deveniți membru Xunlei.</string>
     <string name="hint">Atenţie</string>
     <string name="immediately_a_renewal">Reînnoiţi acum</string>
-    <string name="info_flow_only_load_wifi">Încarcă sursele recomandate atunci când sunteți conectat la Wi-Fi</string>
-    <string name="info_flow_setting">Setări</string>
-    <string name="info_flow_show">Surse recomandate</string>
+    <string name="info_flow_only_load_wifi">Încarcă sursele recomandate doar în Wi-Fi</string>
+    <string name="info_flow_setting">Setări conținut</string>
+    <string name="info_flow_show">Arată conținutul recomandat</string>
     <string name="input_valid_address">Introduceţi calea fişierului</string>
     <string name="install">Instalaţi</string>
     <string name="install_failed">"Nu s-a putut instala %1$s"</string>
