--- a/Romanian/main/MiuiVideo.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiVideo.apk/res/values-ro/strings.xml
@@ -609,6 +609,7 @@ Pentru a vă activa contul, accesați
     <string name="vp_full_high_definition">1080p</string>
     <string name="vp_full_screen">Redare pe ecran complet</string>
     <string name="vp_function">Setări</string>
+    <string name="vp_get_url_error">"Nu s-a putut găsi adresa pentru acest videoclip."</string>
     <string name="vp_hide_media_info">Ascundeţi detaliile videoclipului</string>
     <string name="vp_high_definition">HD</string>
     <string name="vp_hint">Atenție</string>
@@ -663,7 +664,6 @@ Pentru a vă activa contul, accesați
     <string name="vp_select_video_source">Selectaţi sursa</string>
     <string name="vp_skip">Omiteţi intro și credite</string>
     <string name="vp_standard_definition">Standard</string>
-    <string name="vp_start_error_msg">"Nu se poate reda acest videoclip"</string>
     <string name="vp_super_definition">Super</string>
     <string name="vp_time_separator">/</string>
     <string name="vp_toast_downloadapk">Descărcare…</string>
@@ -671,7 +671,6 @@ Pentru a vă activa contul, accesați
     <string name="vp_using_16_9">16:9</string>
     <string name="vp_using_4_3">4:3</string>
     <string name="vp_video_bad_network_condition">Stare nesatisfăcătoare a rețelei, încercați din nou mai târziu</string>
-    <string name="vp_video_create_video_error_info">Eroare inițializare player video; vă rugăm să încercați din nou mai târziu.</string>
     <string name="vp_video_invalid_cp_info">Informație incorectă despre furnizorul video, reporniți aplicația</string>
     <string name="vp_video_loading"><CDATA>Încărcare…</CDATA></string>
     <string name="vp_video_plugin_installation">Instalare plugin %1$s pentru cea mai bună calitate a imaginii…</string>
